--- a/reviewboard/static/rb/css/ui/markdown.less
+++ b/reviewboard/static/rb/css/ui/markdown.less
@@ -13,7 +13,8 @@
   .markdown-wysiwyg();
 
   .emoji {
+    width: auto;
+    height: 1rem;
     vertical-align: text-top;
-    width: 1rem;
   }
 }
